# xoanime-local

./: .gitignore  README.md
frontend/: pyproject.toml
frontend/anime/: middleware.py  urls.py  views.py
frontend/base/: settings.py  urls.py
frontend/templates/: base.html  index.html
frontend/templates/anime/: details.html  recent.html  search.html  top.html  watch.html
