[tool.poetry]
name = "xo-gogo"
version = "0.1.0"
description = ""
authors = ["Akash Damle"]
readme = "README.md"
packages = [{include = "xo_gogo"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
